--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   ],
   "require": {
     "php": ">=5.5",
-    "phpoffice/phpexcel": "1.8.*",
+    "phpoffice/phpexcel": "dev-fix-string-offset-access-with-curly-braces-is-deprecated",
     "illuminate/cache": "5.0.*|5.1.*|5.2.*",
     "illuminate/config": "5.0.*|5.1.*|5.2.*",
     "illuminate/filesystem": "5.0.*|5.1.*|5.2.*",
@@ -51,5 +51,11 @@
     "classmap": [
       "tests/TestCase.php"
     ]
-  }
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@github.com:doubleoh13/PHPExcel"
+    }
+  ]
 }
